# Hackerrank-Solutions

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
docs/: Doxyfile
docs/html/: _almost_sorted_8cpp.html  _almost_sorted_8cpp.js  _almost_sorted_8h.html  _almost_sorted_8h.js  _almost_sorted_8h_source.html  _bigger_is_greater_8cpp.html  _bigger_is_greater_8cpp.js  _bigger_is_greater_8h.html  _bigger_is_greater_8h.js  _bigger_is_greater_8h_source.html  _bomberman_8cpp.html  _bomberman_8cpp.js  _bomberman_8h.html  _bomberman_8h.js  _bomberman_8h_source.html  _grid_search_8cpp.html  _grid_search_8cpp.js  _grid_search_8h.html  _grid_search_8h.js  _grid_search_8h_source.html  _organize_container_8cpp.html  _organize_container_8cpp.js  _organize_container_8h.html  _organize_container_8h.js  _organize_container_8h_source.html  _queens_attack2_8cpp.html  _queens_attack2_8cpp.js  _queens_attack2_8h.html  _queens_attack2_8h.js  _queens_attack2_8h_source.html  _r_e_a_d_m_e_8md.html  _surface_area_8cpp.html  _surface_area_8cpp.js  _surface_area_8h.html  _surface_area_8h.js  _surface_area_8h_source.html  _test___almost_sorted_8cpp.html  _test___almost_sorted_8cpp.js  _test___grid_search_8cpp.html  _test___grid_search_8cpp.js  (+82 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  (+39 more)
gtest/: CMakeLists.txt  Test_AlmostSorted.cpp  Test_GridSearch.cpp  Test_OrganizeContainers.cpp  Test_QueensAttack2.cpp  Test_SurfaceArea.cpp  main.cpp
(+21 files in other folders)
