cmake_minimum_required(VERSION 3.5)

project(Hackerrank-Solutions LANGUAGES CXX)

add_subdirectory(libs/Algorithms/Implementation/QueensAttack2)
add_subdirectory(libs/Algorithms/Implementation/OrganizeContainer)
add_subdirectory(libs/Algorithms/Implementation/BiggerIsGreater)
add_subdirectory(libs/Algorithms/Implementation/GridSearch)


add_subdirectory(app)

